--- a/APIExecutor/app/build.gradle
+++ b/APIExecutor/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
+    implementation 'org.nanohttpd:nanohttpd:2.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
